--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+<body>
 <button class="accordion">Вопрос 1</button>
-   <div class="panel">
-    <p>Ответ на Вопрос 1...</p>
-   </div>
+ <div class="panel">
+   <p>Ответ на Вопрос 1...</p>
+ </div>
 
 <button class="accordion">Вопрос 2</button>
-  <div class="panel">
-    <p>Ответ на Вопрос 2...</p>
-  </div>
+ <div class="panel">
+   <p>Ответ на Вопрос 2...</p>
+ </div>
 
 <button class="accordion">Вопрос  3</button>
-  <div class="panel">
-    <p>Ответ на Вопрос 3 ...</p>
-  </div>
+ <div class="panel">
+   <p>Ответ на Вопрос 3 ...</p>
+ </div>
+</body>
+</html>
